plugins {
  id 'java-library'
  id 'checkstyle'
  // Doesn't work with Java 16
  //id 'net.ltgt.errorprone' version '1.3.0'
}

group 'me.hugmanrique'
version '0.0.1-SNAPSHOT'

ext {
  junitVersion = '5.7.0'
  incubatorArgs = ['--add-modules', 'jdk.incubator.foreign']
}

java {
  modularity.inferModulePath = true
  toolchain.languageVersion = JavaLanguageVersion.of(16)
}

repositories {
  mavenCentral()
}

dependencies {
  compileOnlyApi 'org.checkerframework:checker-qual:3.8.0'
  //errorprone 'com.google.errorprone:error_prone_core:2.5.1'
  testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
  testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += incubatorArgs
  //// https://github.com/google/error-prone/issues/1647
  //options.errorprone.disable('UnnecessaryParentheses')
}

checkstyle {
  toolVersion = '8.38'
  // Fail build if there's any violations
  maxErrors = 0
  maxWarnings = 0
}

test {
  useJUnitPlatform()
  jvmArgs += incubatorArgs
}
